# water-engine

./: .gitmodules  CMakeLists.txt  README.md  imgui.ini
config/: shaders.ini
include/: input.h
res/shaders/: basic.frag  basic.vert  parallax.frag  pbr.frag
src/: main.cpp
src/Backend/: GLFW.cpp  GLFW.h  glfw_backend.cpp  glfw_backend.h
src/Input/: Input.cpp  input.cpp
src/Math/: quaternion.h
src/Models/: Models.cpp  Models.h
src/Renderer/: Renderer.cpp  Renderer.h  ShaderProgram.cpp  ShaderProgram.h  ShaderProgram.h~  Texture2D.cpp  Texture2D.h  Vertex.h  renderer.cpp  renderer.h  shader.cpp  shader.h  shader_program.cpp  shader_program.h  vertex.h
src/World/: Object.h  world.h
src/World/camera/: camera.cpp  camera.h
src/assets/: material_flags.h  materials.cpp  materials.h  meshes.cpp  meshes.h  models.cpp  models.h  texture2ds.cpp  texture2ds.h  textures_2d.cpp  textures_2d.h
src/backend/: glfw_backend.cpp  glfw_backend.h  glfw_enums.h  glfw_input.cpp  glfw_input.h
src/deprecated/: texture2d.cpp  texture2d.h
src/input/: enums.h  input.cpp  input.h
src/renderer/: renderer.cpp  renderer.h  shader_program.cpp  shader_program.h  u_blocks.h  vertex.h
src/utility/: bitmask.h  tangent_space.cpp  tangent_space.h  tanget_space.cpp
src/utility/config/: config.cpp  config.h
src/world/: frame_context.h  lighting.cpp  lighting.h  transform.cpp  transform.h  update_registry.cpp  update_registry.h  world.cpp  world.h
src/world/camera/: camera.cpp  camera.h
